# credit-risk-scoring

./: Dockerfile  README.md  main.py  pyproject.toml
notebooks/: eda.ipynb  preprocessing.ipynb  train_LR.ipynb  train_LightGBM.ipynb  train_RF.ipynb  train_XGBoost.ipynb
src/: app.py  predict.py  preprocessing.py  train.py
