[project]
name = "credit-risk-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "kagglehub>=0.4.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "seaborn>=0.13.2",
]
